<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Closet Inventory</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appTitle">Smart Closet Inventory</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_button_label">Search</string>
    <string name="closet_button_label">Closet</string>
    <string name="newtag_button_label">New Tag</string>
    <string name="search_fragment_title">Search Fragment</string>
    <string name="search_read_msg">Tap and hold the tag against the back of the phone to search</string>

    <string name="newtag_title">New Tag Fragment</string>
    <string name="newtag_article_id">No current article.</string>
    <string name="newtag_article_description">Enter article description.</string>
    <string name="newtag_article_name">Enter article name.</string>
    <string name="newtag_article_tags">Enter article tags.</string>
    <string name="newtag_article_price">Enter article price.</string>o
    <string name="newtag_article_owner">Enter article owner.</string>
    <string name="newtag_id_button">Update article Id</string>
    <string name="newtag_articledescription">Enter article description.</string>
    <string name="newtag_article_type_prompt">Select an article type...</string>
    <string name="newtag_select_file_button">Select File For Upload</string>
    <string name="newtag_create_article_button">Create Article</string>
    <string name="newtag_ok_sell_checkbox">This item OK to sell.</string>
    <string name="newtag_private_checkbox">This item is private.</string>
    <string name="newtag_write_msg">Tap and hold the tag against the back of the phone to write.</string>

    <string name="profile_user_name_label">User Name</string>
    <string name="profile_first_name_label">First Nameo</string>
    <string name="profile_last_name_label">Last Name</string>
    <string name="profile_email_label">Email</string>
    <string name="profile_user_pin_label">Pin</string>
    <string name="profile_submit_button_label">Submit</string>

    <string-array name="newtag_article_type_array">
        <item>Select an article type...</item>
        <item>Coats</item>
        <item>Dresses</item>
        <item>Gloves</item>
        <item>Hats</item>
        <item>Pants</item>
        <item>Scarves</item>
        <item>Shirts</item>
        <item>Shoes</item>
        <item>Shorts</item>
        <item>Skirts</item>
        <item>Sweaters</item>
    </string-array>

    <string name="title_activity_write_tag">WriteTagActivity</string>

    <!-- Nav Drawer Menu Itemes-->
    <string-array name="nav_drawer_items">
        <item>Home</item><!-- 0 -->
        <item>Closet</item><!-- 1 -->
        <item>Search</item><!-- 2 -->
        <item>New Tag</item><!-- 3 -->
        <item>Profile</item><!-- 4 -->
        <item>Match</item><!-- 5 -->
        <item>Article</item><!-- 6 -->
        <item>Log out</item><!-- 7 -->
    </string-array>

</resources>
