<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ssar.smartcloset.NewTagFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/articleNameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/newtag_article_name"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/articleDescriptionEditText"
        android:layout_below="@+id/articleNameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/newtag_article_description"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/articleTagsEditText"
        android:layout_below="@+id/articleDescriptionEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/newtag_article_tags"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/articlePriceEditText"
        android:layout_below="@+id/articleTagsEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/newtag_article_price"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/articleOwnerEditText"
        android:layout_below="@+id/articlePriceEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/newtag_article_owner"/>

    <Spinner
        android:id="@+id/articleTypeSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/articleOwnerEditText"
        android:entries="@array/newtag_article_type_array"
        android:prompt="@string/newtag_article_type_prompt" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newtag_ok_sell_checkbox"
        android:id="@+id/articleOkToSellCheckbox"
        android:layout_below="@+id/articleTypeSelector"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newtag_private_checkbox"
        android:id="@+id/articlePrivateCheckbox"
        android:layout_below="@+id/articleOkToSellCheckbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:id="@+id/createArticleButton"
        android:layout_below="@+id/articlePrivateCheckbox"
        android:onClick="addListenerOnSpinnerItemSelection"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

   <!-- <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/articleId"
        android:layout_below="@+id/createArticleButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/newtag_article_id"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newtag_id_button"
        android:id="@+id/updateArticleIdButton"
        android:layout_below="@+id/articleId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newtag_select_file_button"
        android:id="@+id/selectFileButton"
        android:layout_below="@+id/updateArticleIdButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    -->

</RelativeLayout>
