<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ssar.smartcloset.ProfileFragment"
    android:textAlignment="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Welcome"
        android:id="@+id/profileTitleTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <LinearLayout
        style="@style/InputLinearLayout"
        android:id="@+id/userNameLinearLayout"
        android:layout_below="@+id/profileTitleTextView"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/InputLabelTextView"
            android:text="@string/profile_user_name_label"
            android:id="@+id/userNameTextViewLabel" />

        <EditText
            style="@style/InputEditTextView"
            android:id="@+id/userNameEditText" />

    </LinearLayout>

    <LinearLayout
        style="@style/InputLinearLayout"
        android:id="@+id/firstNameLinearLayout"
        android:layout_below="@id/userNameLinearLayout">

        <TextView
            style="@style/InputLabelTextView"
            android:text="@string/profile_first_name_label"
            android:id="@+id/firstNameTextViewLabel" />

        <EditText
            style="@style/InputEditTextView"
            android:id="@+id/firstNameEditText" />

    </LinearLayout>

    <LinearLayout
        style="@style/InputLinearLayout"
        android:id="@+id/lastNameLinearLayout"
        android:layout_below="@id/firstNameLinearLayout">

        <TextView
            style="@style/InputLabelTextView"
            android:text="@string/profile_last_name_label"
            android:id="@+id/lastNameTextViewLabel" />

        <EditText
            style="@style/InputEditTextView"
            android:id="@+id/lastNameEditText" />

    </LinearLayout>

    <LinearLayout
        style="@style/InputLinearLayout"
        android:id="@+id/emailLinearLayout"
        android:layout_below="@id/lastNameLinearLayout">

        <TextView
            style="@style/InputLabelTextView"
            android:text="@string/profile_email_label"
            android:id="@+id/emailTextViewLabel" />

        <EditText
            style="@style/InputEditTextView"
            android:id="@+id/emailEditText" />

    </LinearLayout>

</RelativeLayout>
